Got maven verify working.